--- a/auth-service.yml
+++ b/auth-service.yml
@@ -4,6 +4,15 @@ server:
 spring:
   application:
     name: auth-service
+  datasource:
+    url: jdbc:mysql://localhost:3306/spring_cloud_db?serverTimezone=UTC
+    username: root
+    password: Yuesi
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 
 eureka:
   client:
